--- a/app/globals.css
+++ b/app/globals.css
@@ -275,7 +275,8 @@
 .pf-product-title {
   font-family: var(--font-lexia-std), sans-serif;
   font-size: 7pt;
-  font-weight: 200 !important;
+  /* font-weight: 200 !important; */
+  font-weight: lighter !important;
   color: #951b81;
   line-height: 1.1;
   word-break: break-words;
