--- a/app/globals.css
+++ b/app/globals.css
@@ -332,14 +332,27 @@
 /* Стил за цената на етикета - използва се в LabelForPrint */
 .pf-price {
   font-family: var(--font-din-engschrift-std), sans-serif;
-  font-size: 46.8pt;
+  font-size: 41pt;
   color: black;
   font-weight: 500 !important;
   text-align: center;
   line-height: 0.9;
   /* letter-spacing: 3pt; */
   margin-top: 0.3mm;
-  padding: 0 10mm 3mm;
+  margin-bottom: 0mm;
+  padding: 0mm;
+}
+/* Стил за Gültigkeit под цената - използва се в LabelForPrint */
+.pf-gultigkeit {
+  font-family: var(--font-din-engschrift-std), sans-serif;
+  font-size: 8pt;
+  color: black;
+  font-weight: 400 !important;
+  text-align: center;
+  line-height: 1;
+  margin-top: -4mm;
+  margin-bottom: 0mm;
+  padding: 0mm;
 }
 /* Стилове за стрелките отляво и отдясно - използват се в LabelForPrint */
 .pf-arrow-left,
